force-app/main/default/objects/Account/fields/Channel_BDM__c.field-meta.xml
<CustomField>
    <fullName>Channel_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>