force-app/main/default/objects/Account/fields/Channel_Forecast_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Channel_Forecast_End_Date__c</fullName>
    <formula>CASE(
ForecastPeriod__c,
&apos;3 Months&apos;, ADDMONTHS(Channel_Forecast_Start_Date__c ,3),
&apos;6 Months&apos;, ADDMONTHS(Channel_Forecast_Start_Date__c ,6),
&apos;12 Months&apos;, ADDMONTHS(Channel_Forecast_Start_Date__c,12)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Forecast End Date</label>
    <type>Date</type>
</CustomField>