force-app/main/default/objects/Account/fields/Channel_Forecast_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Channel_Forecast_Start_Date__c</fullName>
    <label>Channel Forecast Start Date</label>
    <type>Date</type>
</CustomField>