force-app/main/default/objects/Account/fields/Channel_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Status__c</fullName>
    <label>Channel Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enable</fullName>
                <default>true</default>
                <label>Enable</label>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Recruit</fullName>
                <isActive>false</isActive>
                <label>Recruit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>