force-app/main/default/objects/Account/fields/comp_house__Company_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>comp_house__Company_Creation_Date__c</fullName>
    <label>Company Creation Date</label>
    <type>Date</type>
</CustomField>