force-app/main/default/objects/Account/fields/Company_Owner__c.field-meta.xml
<CustomField>
    <fullName>Company_Owner__c</fullName>
    <inlineHelpText>Which is the primary M12 Solutions Ltd brand handling the customer relationship?</inlineHelpText>
    <label>Primary Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M12</fullName>
                <default>true</default>
                <label>M12</label>
            </value>
            <value>
                <fullName>Giganet - Business</fullName>
            </value>
            <value>
                <fullName>Giganet - Residential</fullName>
            </value>
            <value>
                <fullName>Comm21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>