force-app/main/default/objects/Account/fields/Company_Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Trade_Name__c</fullName>
    <inlineHelpText>If this customer has a different trading name or company name, enter this here</inlineHelpText>
    <label>Company Trade Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>