force-app/main/default/objects/Account/fields/Contract_Limit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Limit__c</fullName>
    <inlineHelpText>The credit safe contract limit</inlineHelpText>
    <label>Contract Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>