force-app/main/default/objects/Account/fields/Contract_Limit_Override__c.field-meta.xml
<CustomField>
    <fullName>Contract_Limit_Override__c</fullName>
    <inlineHelpText>This is a field to override the credit safe&apos;s contract limit in case that we want to accept the business but the credit safe contract limit field is too low.</inlineHelpText>
    <label>Contract Limit Override</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>