force-app/main/default/objects/Account/fields/Contract_Limit_Override_By__c.field-meta.xml
<CustomField>
    <fullName>Contract_Limit_Override_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who has overridden the contract limit amount?</inlineHelpText>
    <label>Contract Limit Override By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>