force-app/main/default/objects/Account/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <inlineHelpText>The credit safe credit limit score out of 100</inlineHelpText>
    <label>Credit Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>