force-app/main/default/objects/Account/fields/Current_Mobile_Network__c.field-meta.xml
<CustomField>
    <fullName>Current_Mobile_Network__c</fullName>
    <label>Mobile Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>O2</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Virgin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>