force-app/main/default/objects/Account/fields/Current_Network__c.field-meta.xml
<CustomField>
    <fullName>Current_Network__c</fullName>
    <label>Fixed Network Reseller</label>
    <length>50</length>
    <type>Text</type>
</CustomField>