force-app/main/default/objects/Account/fields/Current_Phone_System__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone_System__c</fullName>
    <label>Phone System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aastra</fullName>
            </value>
            <value>
                <fullName>Alcatel</fullName>
            </value>
            <value>
                <fullName>Asterisk</fullName>
            </value>
            <value>
                <fullName>Avaya</fullName>
            </value>
            <value>
                <fullName>Avaya Nortel</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Ericsson</fullName>
            </value>
            <value>
                <fullName>Hosted Gamma</fullName>
            </value>
            <value>
                <fullName>Hosted Other</fullName>
            </value>
            <value>
                <fullName>Hosted Other Broadsoft</fullName>
            </value>
            <value>
                <fullName>IP Cortex</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Meridian</fullName>
            </value>
            <value>
                <fullName>Microsoft Lync</fullName>
            </value>
            <value>
                <fullName>Mitel</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Panasonic</fullName>
            </value>
            <value>
                <fullName>Polycom</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>ShoreTel</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>SpliceCom</fullName>
            </value>
            <value>
                <fullName>Toshiba</fullName>
            </value>
            <value>
                <fullName>Zultys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>