force-app/main/default/objects/Account/fields/Current_phonesys_Maintainer__c.field-meta.xml
<CustomField>
    <fullName>Current_phonesys_Maintainer__c</fullName>
    <label>Phone System  Maintainer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>