force-app/main/default/objects/Account/fields/Customer_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Won_Date__c</fullName>
    <label>Customer Won Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>