force-app/main/default/objects/Account/fields/default_discount_level__c.field-meta.xml
<CustomField>
    <fullName>default_discount_level__c</fullName>
    <inlineHelpText>Default level of % discount for this account</inlineHelpText>
    <label>Default discount level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>