force-app/main/default/objects/Account/fields/ForecastPeriod__c.field-meta.xml
<CustomField>
    <fullName>ForecastPeriod__c</fullName>
    <label>Forecast Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>