force-app/main/default/objects/Account/fields/Internet_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Internet_Line_Type__c</fullName>
    <label>Internet Line Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>FTTC</fullName>
            </value>
            <value>
                <fullName>SDSL</fullName>
            </value>
            <value>
                <fullName>Ethernet</fullName>
            </value>
            <value>
                <fullName>MPLS</fullName>
            </value>
            <value>
                <fullName>EFM</fullName>
            </value>
            <value>
                <fullName>FTTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>