force-app/main/default/objects/Account/fields/Internet_Provider__c.field-meta.xml
<CustomField>
    <fullName>Internet_Provider__c</fullName>
    <label>Internet Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>