force-app/main/default/objects/Account/fields/M12_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>M12_Account_Number__c</fullName>
    <description>Auto generated M12 account number to use for all systems</description>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <label>GN Account Number</label>
    <type>AutoNumber</type>
</CustomField>