force-app/main/default/objects/Account/fields/M12_Services__c.field-meta.xml
<CustomField>
    <fullName>M12_Services__c</fullName>
    <label>M12 Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>NGN</fullName>
            </value>
            <value>
                <fullName>Phone Calls</fullName>
            </value>
            <value>
                <fullName>Phone Lines</fullName>
            </value>
            <value>
                <fullName>Phone System</fullName>
            </value>
            <value>
                <fullName>Phone System Maintenance</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>