force-app/main/default/objects/Account/fields/Mobile_Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Contract_Expiry_Date__c</fullName>
    <label>Mobile Contract Expiry Date</label>
    <type>Date</type>
</CustomField>