force-app/main/default/objects/Account/fields/Mobile_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Distributor__c</fullName>
    <label>Mobile Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aerial</fullName>
            </value>
            <value>
                <fullName>Daisy</fullName>
            </value>
            <value>
                <fullName>Gamma</fullName>
            </value>
            <value>
                <fullName>TMS</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>