force-app/main/default/objects/Account/fields/Mobile_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Reseller__c</fullName>
    <label>Mobile Reseller</label>
    <length>50</length>
    <type>Text</type>
</CustomField>