force-app/main/default/objects/Account/fields/Monthly_Broadband_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Broadband_Run_Rate__c</fullName>
    <label>Monthly Broadband Run Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>