force-app/main/default/objects/Account/fields/Monthly_Ethernet_run_rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Ethernet_run_rate__c</fullName>
    <label>Monthly Ethernet Run Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>