force-app/main/default/objects/Account/fields/MPS__c.field-meta.xml
<CustomField>
    <fullName>MPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mail preference service</description>
    <label>MPS</label>
    <type>Checkbox</type>
</CustomField>