force-app/main/default/objects/Account/fields/Network_Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Network_Contract_Expiry_Date__c</fullName>
    <label>Network Contract Expiry Date</label>
    <type>Date</type>
</CustomField>