force-app/main/default/objects/Account/fields/No_of_Company_sites__c.field-meta.xml
<CustomField>
    <fullName>No_of_Company_sites__c</fullName>
    <label>No of Company sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>