force-app/main/default/objects/Account/fields/No_of_Network_Lines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Network_Lines__c</fullName>
    <label>No of Network Lines</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>