force-app/main/default/objects/Account/fields/No_of_PSTN_Line__c.field-meta.xml
<CustomField>
    <fullName>No_of_PSTN_Line__c</fullName>
    <label>No of PSTN Lines</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>