force-app/main/default/objects/Account/fields/Number_of_mobiles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_mobiles__c</fullName>
    <label>Number of mobiles</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>