force-app/main/default/objects/Account/fields/Other_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Source__c</fullName>
    <label>Other Lead Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>