force-app/main/default/objects/Account/fields/Phone_System_Call_Centre__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Call_Centre__c</fullName>
    <label>Phone System Call Centre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CallMedia Enterprise</fullName>
            </value>
            <value>
                <fullName>CallMedia for Maximiser</fullName>
            </value>
            <value>
                <fullName>SpliceCom Vision</fullName>
            </value>
            <value>
                <fullName>ShoreTel ECC</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>