force-app/main/default/objects/Account/fields/Phone_System_Logger__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Logger__c</fullName>
    <label>Phone System Logger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SpliceCom Vision</fullName>
            </value>
            <value>
                <fullName>SpliceCom SpliceLog Pro</fullName>
            </value>
            <value>
                <fullName>PeakSuite</fullName>
            </value>
            <value>
                <fullName>OAK</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>