force-app/main/default/objects/Account/fields/Phone_System_Maintenance_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Maintenance_Exp_Date__c</fullName>
    <label>Phone System Maintenance Exp Date</label>
    <type>Date</type>
</CustomField>