force-app/main/default/objects/Account/fields/Phone_System_Model__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Model__c</fullName>
    <description>Please indicate the current phone system model type</description>
    <inlineHelpText>Please indicate the current phone system model type</inlineHelpText>
    <label>Phone System Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>