force-app/main/default/objects/Account/fields/Phone_System_Music_Marketing_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Music_Marketing_on_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone System Music/Marketing on Hold</label>
    <type>Checkbox</type>
</CustomField>