force-app/main/default/objects/Account/fields/Phone_System_No_of_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_No_of_Extensions__c</fullName>
    <label>Phone System No of Extensions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>