force-app/main/default/objects/Account/fields/Phone_System_Recorder__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Recorder__c</fullName>
    <label>Phone System Recorder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elephant</fullName>
            </value>
            <value>
                <fullName>OAISYS</fullName>
            </value>
            <value>
                <fullName>OAK</fullName>
            </value>
            <value>
                <fullName>SpliceCom Vision</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>