force-app/main/default/objects/Account/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor Service</fullName>
            </value>
            <value>
                <fullName>Business Insolvent</fullName>
            </value>
            <value>
                <fullName>Business Buyout</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Re-tender Lost</fullName>
            </value>
            <value>
                <fullName>Business Requirements Changed</fullName>
            </value>
            <value>
                <fullName>ECCs</fullName>
            </value>
            <value>
                <fullName>Wayleave Issues</fullName>
            </value>
            <value>
                <fullName>Poor Credit Rating</fullName>
            </value>
            <value>
                <fullName>Provisioning - Supplier</fullName>
            </value>
            <value>
                <fullName>Provisioning - Giganet</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Lost Contact</fullName>
            </value>
            <value>
                <fullName>Service Not Available At Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>