force-app/main/default/objects/Account/fields/Total_Account_Contract_GP__c.field-meta.xml
<CustomField>
    <fullName>Total_Account_Contract_GP__c</fullName>
    <description>Field to display the total amount of closed contract GP from its associated opportunities.</description>
    <label>Total Account Contract GP</label>
    <summarizedField>Opportunity.Total_Contract_GP__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>