force-app/main/default/objects/Account/fields/Total_Account_Contract_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Account_Contract_Revenue__c</fullName>
    <description>Field to display the total amount of close contract revenue from its associated opportunities.</description>
    <label>Total Account Contract Revenue</label>
    <summarizedField>Opportunity.Total_Contract_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>