force-app/main/default/objects/Account/fields/TPS__c.field-meta.xml
<CustomField>
    <fullName>TPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Telephone Preference Service</description>
    <label>TPS</label>
    <type>Checkbox</type>
</CustomField>