force-app/main/default/objects/Account/fields/Type_of_Location__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Location__c</fullName>
    <label>Type of Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Head Office</fullName>
            </value>
            <value>
                <fullName>Regional Site</fullName>
            </value>
            <value>
                <fullName>Single Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>