force-app/main/default/objects/Account/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <inlineHelpText>VAT number in the format [GBxxxxxxxxx]</inlineHelpText>
    <label>VAT Number</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>