force-app/main/default/objects/Account/fields/WiFi_Contract_Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>WiFi_Contract_Expiry_date__c</fullName>
    <label>WiFi Contract Expiry date</label>
    <type>Date</type>
</CustomField>