force-app/main/default/objects/Account/fields/WiFi_Maintainer__c.field-meta.xml
<CustomField>
    <fullName>WiFi_Maintainer__c</fullName>
    <label>Wi-Fi Reseller</label>
    <length>50</length>
    <type>Text</type>
</CustomField>