force-app/main/default/objects/Account/fields/Zendesk__Result__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Result__c</fullName>
    <description>Contains the result of whether the Zendesk system was updated with the Account record changes</description>
    <label>Zendesk Result</label>
    <type>TextArea</type>
</CustomField>