force-app/main/default/objects/Account/fields/Zendesk__Zendesk_oldTags__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_oldTags__c</fullName>
    <description>contains the old tags before changes were made to the tags. To handle deleting tags in Zendesk system.</description>
    <label>Zendesk_oldTags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>