force-app/main/default/objects/Account/fields/Zendesk__Zendesk_Organization__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_Organization__c</fullName>
    <description>Specify your Zendesk Organization name here if you&apos;d like to override the default behavior of the ticket view.</description>
    <inlineHelpText>Show Zendesk tickets for the specified organization instead of the combined tickets for all users in the account.</inlineHelpText>
    <label>Zendesk Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>