force-app/main/default/objects/Account/fields/Zendesk__Zendesk_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_Organization_Id__c</fullName>
    <description>Contains the Zendesk ORG Id</description>
    <label>Zendesk Organization Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>