force-app/main/default/objects/Account/fields/Zendesk__Zendesk_OutofSync__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True if the record is not synced with Zendesk Organization</description>
    <label>Zendesk_OutofSync</label>
    <type>Checkbox</type>
</CustomField>