force-app/main/default/objects/Account/recordTypes/Account_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Account_Record_Type</fullName>
    <active>true</active>
    <label>Business Account Record Type</label>
</RecordType>