force-app/main/default/objects/Account/recordTypes/Channel_Partner_Account.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner_Account</fullName>
    <active>true</active>
    <label>Channel Partner Account</label>
</RecordType>