force-app/main/default/objects/Account/recordTypes/Consumer_Account_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Account_Record_Type</fullName>
    <active>true</active>
    <description>Record type for consumer properties</description>
    <label>Consumer Account Record Type</label>
</RecordType>