force-app/main/default/objects/Account/validationRules/Billing_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address</fullName>
    <active>true</active>
    <description>Please complete with full address details</description>
    <errorConditionFormula>AND(OR(
    ISBLANK(BillingStreet),
    ISBLANK(BillingCity),
    ISBLANK(BillingPostalCode)
),(Description  &lt;&gt; &apos;Created by Breadwinner&apos;))</errorConditionFormula>
    <errorMessage>Please complete with full address details for the account</errorMessage>
</ValidationRule>