force-app/main/default/objects/Account/validationRules/Contract_Limit_Override.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Limit_Override</fullName>
    <active>true</active>
    <description>Ensure that the user is completed if the contract limit has been overridden</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Contract_Limit_Override__c )),
  ISBLANK( Contract_Limit_Override_By__c) 
)</errorConditionFormula>
    <errorDisplayField>Contract_Limit_Override_By__c</errorDisplayField>
    <errorMessage>Please ensure that you have completed this section if you have overridden the contract limit</errorMessage>
</ValidationRule>