force-app/main/default/objects/Account/validationRules/Customer_Lost_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Lost_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
TEXT(Type) = &quot;Customer - Lost&quot;,
ISBLANK(Customer_Lost_Date__c)),
AND(
TEXT(Type) = &quot;Customer - Dissolved&quot;,
ISBLANK(Customer_Lost_Date__c))
)</errorConditionFormula>
    <errorMessage>Please enter Customer Lost Date</errorMessage>
</ValidationRule>