force-app/main/default/objects/Account/validationRules/Other_Phone_System.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Phone_System</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Current_Phone_System__c, &quot;Other&quot;), 
ISBLANK( Other_Phone_System__c))</errorConditionFormula>
    <errorDisplayField>Other_Phone_System__c</errorDisplayField>
    <errorMessage>Please specify &apos;Other&apos; Current phone system</errorMessage>
</ValidationRule>