force-app/main/default/objects/Account/validationRules/Other_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Type , &quot;Other&quot;),
ISBLANK( Other_Type__c ))</errorConditionFormula>
    <errorDisplayField>Other_Type__c</errorDisplayField>
    <errorMessage>Please specify &quot;Other&quot; Type</errorMessage>
</ValidationRule>